--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
         <!--<dependency>-->
             <!--<groupId>com.github.jsimone</groupId>-->
             <!--<artifactId>webapp-runner</artifactId>-->
-            <!--<version>8.0.30.1</version>-->
+            <!--<version>8.0.33.1</version>-->
         <!--</dependency>-->
     </dependencies>
 
@@ -85,7 +85,6 @@
                     </configuration>
                 </plugin>
 
-                <!-- webapp: this file will be used by heroku to run the project-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
@@ -93,15 +92,13 @@
                     <executions>
                         <execution>
                             <phase>package</phase>
-                            <goals>
-                                <goal>copy</goal>
-                            </goals>
+                            <goals><goal>copy</goal></goals>
                             <configuration>
                                 <artifactItems>
                                     <artifactItem>
                                         <groupId>com.github.jsimone</groupId>
                                         <artifactId>webapp-runner</artifactId>
-                                        <version>8.0.30.2</version>
+                                        <version>8.0.33.1</version>
                                         <destFileName>webapp-runner.jar</destFileName>
                                     </artifactItem>
                                 </artifactItems>
